# RabbitMetrics_Langchain_Tutorial

./: .gitignore  Dockerfile  Makefile  langchain_notebook.ipynb  pyproject.toml  readme.md  requirements.txt  teste_lmstudio.ipynb
